--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React TodoMVC Example</title>
-  </head>
-  <body>
-    <div class="todoapp" id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<!DOCTYPE html>
+<html>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<head>
+	<title>Brahmos Todo MVC</title>
+	<meta charset="UTF-8" />
+</head>
 
-      To begin the development, run `npm start` in this folder.
-      To create a production bundle, use `npm run build`.
-    -->
-  </body>
+<body>
+	<div id="root"></div>
+<script type="text/javascript" src="bundle.js"></script></body>
+
 </html>
